--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 <body>
   <h1>歡迎來到 JINOXY</h1>
   <p>專為運動打造的機能服飾品牌。</p>
-  <a href="https://www.jinnoxy.com" target="_blank">前往官方網站</a>
+  <a href="https://www.jinoxy.com" target="_blank">前往官方網站</a>
 </body>
 </html>
