--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <p style="margin-top: 30px;">
     了解更多商品與優惠資訊，請前往
-    <a href="https://www.jinnoxy.com" target="_blank">JINOXY 官方網站</a>。
+    <a href="https://www.jinoxy.com" target="_blank">JINOXY 官方網站</a>。
   </p>
 </section>
 </section>
