--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JINOXY Landing Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background: #f8f8f8;
-    }
-    h1 { color: #ff6600; }
-    a {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      background: #0066cc;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-    }
-    a:hover { background: #004c99; }
-  </style>
-</head>
-<body>
-  <h1>歡迎來到 JINOXY</h1>
-  <p>專為運動打造的機能服飾品牌。</p>
-  <a href="https://www.jinoxy.com" target="_blank">前往官方網站</a>
+<section style="text-align: left; max-width: 800px; margin: 60px auto; line-height: 1.8;">
+  <h2>關於 JINOXY</h2>
+  <p>
+    JINOXY 是來自台灣的機能服飾品牌，專注於打造結合設計感與高機能的運動服。
+    我們的產品涵蓋 <strong>運動內衣</strong>、<strong>Bratop 上衣</strong>、<strong>機能外套</strong>、<strong>瑜伽褲</strong> 等多元系列，
+    使用通過 <strong>OEKO-TEX 認證</strong> 的環保纖維，並結合最新的 <strong>吸濕排汗</strong>、
+    <strong>涼感紗</strong>、<strong>石墨烯導熱布料</strong> 等技術。
   </p>
-</body>
-</html>
+
+  <h3>涼感與透氣技術</h3>
+  <p>
+    JINOXY 的 <strong>ICE 3.0 涼感系列</strong> 採用特殊斷面嫘縈混紡結構，
+    能快速導出身體熱氣並維持長時間乾爽舒適。
+    無論是跑步、健身、瑜伽還是日常穿搭，都能體驗輕盈與柔軟的平衡感。
+  </p>
+
+  <h3>台灣製造 × 可持續材質</h3>
+  <p>
+    我們堅持「台灣設計、台灣製造」的品質精神，所有布料皆由本地紡織廠直供，
+    減少碳足跡並推行 <strong>GRS 再生紗線</strong> 應用。
+    JINOXY 亦積極導入太陽能、節能染整與環保包裝，實踐真正的永續時尚。
+  </p>
+
+  <h3>JINOXY 品牌願景</h3>
+  <p>
+    我們相信機能不應只是科技，而是舒適與風格的延伸。
+    JINOXY 將持續開發更多創新布料與剪裁技術，讓每一位女性都能穿出自信與自在。
+  </p>
+
+  <p style="margin-top: 30px;">
+    了解更多商品與優惠資訊，請前往
+    <a href="https://www.jinnoxy.com" target="_blank">JINOXY 官方網站</a>。
+  </p>
+</section>
