--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<body>
+  <h1>歡迎來到 JINOXY</h1>
+  <p>專為運動打造的機能服飾品牌。</p>
+  <a href="https://www.jinnoxy.com" target="_blank">前往官方網站</a>
+</body>
+
+
+
+
+
+
+
 <section style="text-align: left; max-width: 800px; margin: 60px auto; line-height: 1.8;">
   <h2>關於 JINOXY</h2>
   <p>
