--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>JINOXY Landing Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f8f8f8;
+    }
+    h1 { color: #ff6600; }
+    a {
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 20px;
+      background: #0066cc;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    a:hover { background: #004c99; }
+  </style>
+</head>
 <body>
   <h1>歡迎來到 JINOXY</h1>
   <p>專為運動打造的機能服飾品牌。</p>
   <a href="https://www.jinnoxy.com" target="_blank">前往官方網站</a>
 </body>
+</html>
+
 
 
 
