--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
       text-align: center;
       padding: 50px;
       background: #f8f8f8;
+      margin: 0;
     }
-    h1 { color: #ff6600; }
+    img.banner {
+      width: 100%;
+      max-height: 600px;
+      object-fit: cover;
+      display: block;
+      margin-bottom: 30px;
+    }
+    h1 { 
+      color: #ff6600; 
+      margin-top: 0;
+    }
     a {
       display: inline-block;
       padding: 10px 20px;
@@ -25,11 +36,17 @@
   </style>
 </head>
 <body>
+  <!-- 🖼️ 頁面頂部圖片 -->
+  <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/0002_%E5%B7%A5%E4%BD%9C%E5%8D%80%E5%9F%9F%201.png" 
+       alt="JINOXY 主視覺" 
+       class="banner" />
+
   <h1>歡迎來到 JINOXY</h1>
   <p>專為運動打造的機能服飾品牌。</p>
   <a href="https://www.jinnoxy.com" target="_blank">前往官方網站</a>
 </body>
 </html>
+
 
 
 
