--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <!-- 🖼️ 頁面頂部圖片 -->
-  <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/%E4%BB%8B%E7%B4%B9%E9%A0%81LOGO2.png" 
+  <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/%E4%BB%8B%E7%B4%B9%E9%A0%81LOGO3_%E5%B7%A5%E4%BD%9C%E5%8D%80%E5%9F%9F%201.png" 
        alt="JINOXY 主視覺" 
        class="banner" />
 
