--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin-bottom: 30px;
     }
     h1 { 
-      color: #ff6600; 
+      color: #07084f; 
       margin-top: 0;
     }
     a {
