--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 <section style="text-align: left; max-width: 800px; margin: 60px auto; line-height: 1.8;">
-  <h2>關於 JINOXY</h2>
+  <<h2 style="text-align:center;">關於 JINOXY</h2>
   <p>
     JINOXY 是來自台灣的機能服飾品牌，專注於打造結合設計感與高機能的運動服。
     我們的產品涵蓋 <strong>運動內衣</strong>、<strong>Bratop 上衣</strong>、<strong>機能外套</strong>、<strong>瑜伽褲</strong> 等多元系列，
@@ -64,7 +64,7 @@
     <strong>涼感紗</strong>、<strong>石墨烯導熱布料</strong> 等技術。
   </p>
 
-  <h3>涼感與透氣技術</h3>
+  <<h3 style="text-align:center;">涼感與透氣技術</h3>
   <p>
     JINOXY 的 <strong>ICE 3.0 涼感系列</strong> 採用特殊斷面嫘縈混紡結構，
     能快速導出身體熱氣並維持長時間乾爽舒適。
@@ -78,7 +78,7 @@
     JINOXY 亦積極導入太陽能、節能染整與環保包裝，實踐真正的永續時尚。
   </p>
 
-  <h3>JINOXY 品牌願景</h3>
+  <h<h3 style="text-align:center;">JINOXY 品牌願景</h3>
   <p>
     我們相信機能不應只是科技，而是舒適與風格的延伸。
     JINOXY 將持續開發更多創新布料與剪裁技術，讓每一位女性都能穿出自信與自在。
