--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
     <strong>涼感紗</strong>、<strong>石墨烯導熱布料</strong> 等技術。
   </p>
 
-  <<h3 style="text-align:center;">涼感與透氣技術</h3>
+  <h3 style="text-align:center;">涼感與透氣技術</h3>
   <p>
     JINOXY 的 <strong>ICE 3.0 涼感系列</strong> 採用特殊斷面嫘縈混紡結構，
     能快速導出身體熱氣並維持長時間乾爽舒適。
     無論是跑步、健身、瑜伽還是日常穿搭，都能體驗輕盈與柔軟的平衡感。
   </p>
 
-  <h3>台灣製造 × 可持續材質</h3>
+  <h3 style="text-align:center;">台灣製造 × 可持續材質</h3>
   <p>
     我們堅持「台灣設計、台灣製造」的品質精神，所有布料皆由本地紡織廠直供，
     減少碳足跡並推行 <strong>GRS 再生紗線</strong> 應用。
     JINOXY 亦積極導入太陽能、節能染整與環保包裝，實踐真正的永續時尚。
   </p>
 
-  <h<h3 style="text-align:center;">JINOXY 品牌願景</h3>
+  <h3 style="text-align:center;">JINOXY 品牌願景</h3>
   <p>
     我們相信機能不應只是科技，而是舒適與風格的延伸。
     JINOXY 將持續開發更多創新布料與剪裁技術，讓每一位女性都能穿出自信與自在。
