--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
     JINOXY 將持續開發更多創新布料與剪裁技術，讓每個人都能穿出自信與自在。
   </p>
 
-  <p style="margin-top: 30px;">
-    了解更多商品與優惠資訊，請前往
-    <a href="https://www.jinoxy.com" target="_blank">JINOXY 官方網站</a>。
-  </p>
+  <p style="margin-top: 30px; text-align: center;">
+  了解更多商品與優惠資訊，請前往<br>
+  <a href="https://www.jinoxy.com" target="_blank" style="display:inline-block; margin-top:10px; color:#0066cc; text-decoration:none; font-weight:bold;">
+    JINOXY 官方網站
+  </a>
+</p>
+
 </section>
