--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
   <p style="margin-top: 30px; text-align: center;">
   了解更多商品與優惠資訊，請前往<br>
-  <a href="https://www.jinoxy.com" target="_blank" style="display:inline-block; margin-top:10px; color:#0066cc; text-decoration:none; font-weight:bold;">
+  <a href="https://www.jinoxy.com" target="_blank"
+     style="display:inline-block; margin-top:10px; color:#ffffff; background:#0066cc; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
     JINOXY 官方網站
   </a>
 </p>
