--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 
   <h1>歡迎來到 JINOXY</h1>
   <p>專為運動打造的機能服飾品牌。</p>
-  <a href="https://www.jinoxy.com" target="_blank">前往官方網站</a>
+  <a href="https://www.jinoxy.com" target="_blank"
+     style="display:inline-block; margin-top:10px; color:#ffffff; background:#0066cc; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
+    JINOXY 官方網站
+  </a>
 </body>
 </html>
 
