--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>JINOXY Landing Page</title>
+
+  <!-- SEO Meta -->
+  <meta name="description" content="JINOXY 台灣製機能運動服飾品牌，專注運動內衣、Bratop、涼感紗與吸濕排汗設計。">
+  <meta name="keywords" content="JINOXY, 運動內衣, 機能服飾, 涼感運動服, 吸濕排汗, 台灣製造">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -31,10 +36,34 @@
       color: #fff;
       text-decoration: none;
       border-radius: 8px;
+      font-weight: bold;
     }
     a:hover { background: #004c99; }
+    section {
+      text-align: left;
+      max-width: 800px;
+      margin: 60px auto;
+      line-height: 1.8;
+    }
+    h2, h3 {
+      color: #07084f;
+      text-align: center;
+    }
+    strong {
+      color: #333;
+    }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L6KE5V5XQ0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-L6KE5V5XQ0');
+  </script>
 </head>
+
 <body>
   <!-- 🖼️ 頁面頂部圖片 -->
   <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/%E4%BB%8B%E7%B4%B9%E9%A0%81LOGO3_%E5%B7%A5%E4%BD%9C%E5%8D%80%E5%9F%9F%201.png" 
@@ -43,56 +72,47 @@
 
   <h1>歡迎來到 JINOXY</h1>
   <p>專為運動打造的機能服飾品牌。</p>
-  <a href="https://www.jinoxy.com" target="_blank"
-     style="display:inline-block; margin-top:10px; color:#ffffff; background:#0066cc; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
+  <a href="https://www.jinoxy.com" target="_blank">
     JINOXY 官方網站
   </a>
+
+  <!-- 🧩 品牌介紹與 SEO 文字區 -->
+  <section>
+    <h2>關於 JINOXY</h2>
+    <p>
+      JINOXY 是來自台灣的機能服飾品牌，專注於打造結合設計感與高機能的運動服。
+      我們的產品涵蓋 <strong>運動內衣</strong>、<strong>Bratop 上衣</strong>、<strong>機能外套</strong>、<strong>瑜伽褲</strong> 等多元系列，
+      使用通過 <strong>OEKO-TEX 認證</strong> 的環保纖維，並結合最新的 <strong>吸濕排汗</strong>、
+      <strong>涼感紗</strong>、<strong>石墨烯導熱布料</strong> 等技術。
+    </p>
+
+    <h3>涼感與透氣技術</h3>
+    <p>
+      JINOXY 的 <strong>涼感系列</strong> 採用特殊斷面嫘縈混紡結構，
+      能快速導出身體熱氣並維持長時間乾爽舒適。
+      無論是跑步、健身、瑜伽還是日常穿搭，都能體驗輕盈與柔軟的平衡感。
+    </p>
+
+    <h3>台灣製造 × 可持續材質</h3>
+    <p>
+      我們堅持「台灣設計、台灣製造」的品質精神，所有布料皆由本地紡織廠直供，
+      減少碳足跡並推行 <strong>GRS 再生紗線</strong> 應用。
+      JINOXY 亦積極導入節能染整與環保包裝，實踐真正的永續時尚。
+    </p>
+
+    <h3>JINOXY 品牌願景</h3>
+    <p>
+      我們相信機能不應只是科技，而是舒適與風格的延伸。
+      JINOXY 將持續開發更多創新布料與剪裁技術，讓每個人都能穿出自信與自在。
+    </p>
+
+    <p style="margin-top: 30px; text-align: center;">
+      了解更多商品與優惠資訊，請前往<br>
+      <a href="https://www.jinoxy.com" target="_blank"
+         style="display:inline-block; margin-top:10px; color:#ffffff; background:#0066cc; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
+        JINOXY 官方網站
+      </a>
+    </p>
+  </section>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-<section style="text-align: left; max-width: 800px; margin: 60px auto; line-height: 1.8;">
-  <h2>關於 JINOXY</h2>
-  <p>
-    JINOXY 是來自台灣的機能服飾品牌，專注於打造結合設計感與高機能的運動服。
-    我們的產品涵蓋 <strong>運動內衣</strong>、<strong>Bratop 上衣</strong>、<strong>機能外套</strong>、<strong>瑜伽褲</strong> 等多元系列，
-    使用通過 <strong>OEKO-TEX 認證</strong> 的環保纖維，並結合最新的 <strong>吸濕排汗</strong>、
-    <strong>涼感紗</strong>、<strong>石墨烯導熱布料</strong> 等技術。
-  </p>
-
-  <h3>涼感與透氣技術</h3>
-  <p>
-    JINOXY 的 <strong>涼感系列</strong> 採用特殊斷面嫘縈混紡結構，
-    能快速導出身體熱氣並維持長時間乾爽舒適。
-    無論是跑步、健身、瑜伽還是日常穿搭，都能體驗輕盈與柔軟的平衡感。
-  </p>
-
-  <h3>台灣製造 × 可持續材質</h3>
-  <p>
-    我們堅持「台灣設計、台灣製造」的品質精神，所有布料皆由本地紡織廠直供，
-    減少碳足跡並推行 <strong>GRS 再生紗線</strong> 應用。
-    JINOXY 亦積極導入節能染整與環保包裝，實踐真正的永續時尚。
-  </p>
-
-  <h3>JINOXY 品牌願景</h3>
-  <p>
-    我們相信機能不應只是科技，而是舒適與風格的延伸。
-    JINOXY 將持續開發更多創新布料與剪裁技術，讓每個人都能穿出自信與自在。
-  </p>
-
-  <p style="margin-top: 30px; text-align: center;">
-  了解更多商品與優惠資訊，請前往<br>
-  <a href="https://www.jinoxy.com" target="_blank"
-     style="display:inline-block; margin-top:10px; color:#ffffff; background:#0066cc; padding:10px 20px; border-radius:8px; text-decoration:none; font-weight:bold;">
-    JINOXY 官方網站
-  </a>
-</p>
-
-</section>
