--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
     JINOXY 官方網站
   </a>
 
+  <section style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; max-width: 1000px; margin: 80px auto; padding: 20px;">
+  <!-- 左側圖片 -->
+  <div style="flex: 1 1 45%; text-align: center;">
+    <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/2407-%E6%8F%90%E8%A2%8EB+%E5%BB%A3-02.png"
+         alt="JINOXY 極奧 透氣收納提袋 三件組"
+         style="width: 100%; max-width: 400px; border-radius: 8px;">
+  </div>
+
+  <!-- 右側文字內容 -->
+  <div style="flex: 1 1 45%; padding: 20px;">
+    <h1 style="font-size: 28px; color: #07084f; margin-bottom: 15px;">
+      極奧 JINOXY 透氣收納提袋系列
+    </h1>
+    <p style="font-size: 16px; color: #333; line-height: 1.8;">
+      採用高強度尼龍網布與強化邊條設計，兼具輕盈與耐用。<br>
+      無論是健身、沙灘或日常通勤，都能輕鬆收納、透氣防潮。<br>
+      三種尺寸組合，滿足多樣使用情境，體現簡約機能風格。
+    </p>
+  </div>
+</section>
+
   <!-- 🧩 品牌介紹與 SEO 文字區 -->
   <section>
     <h2>關於 JINOXY</h2>
