--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <section style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; max-width: 1000px; margin: 80px auto; padding: 20px;">
   <!-- 左側圖片 -->
   <div style="flex: 1 1 45%; text-align: center;">
-    <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/2407-%E6%8F%90%E8%A2%8EB+%E5%BB%A3-02.png"
+    <img src="https://raw.githubusercontent.com/d03280112-sketch/my-landing-page/refs/heads/main/images/2407-%E6%8F%90%E8%A2%8BB%2B%E5%BB%A3-02.png"
          alt="JINOXY 極奧 透氣收納提袋 三件組"
          style="width: 100%; max-width: 400px; border-radius: 8px;">
   </div>
